Added the fixed needed

--- a/pages/aboutus.html
+++ b/pages/aboutus.html
@@ -49,7 +49,11 @@
     <div class="ping"></div>
 
     <div class="whatsapp-btn">
-      <a href="https://wa.me/918848080346?text=Hello%2C%20I%20have%20a%20question%20About%20Your%20Services" target="_blank"><i class="fa-brands fa-whatsapp"></i></a>
+      <a
+        href="https://wa.me/918848080346?text=Hello%2C%20I%20have%20a%20question%20About%20Your%20Services"
+        target="_blank"
+        ><i class="fa-brands fa-whatsapp"></i
+      ></a>
     </div>
     <div class="content">
       <!-- header section  -->
@@ -432,12 +436,321 @@
             <h3 class="sec-title-gallery">
               <i class="fa-solid fa-user-group"></i>OUR TEAM
             </h3>
-            <h2 class="gallery-title-head">Team Member</h2>
+            <h2 class="gallery-title-head">Team Members</h2>
             <div class="sec-title-seperator">
               <div class="blue-item"></div>
             </div>
           </div>
           <div class="team-members-gallery">
+            <div class="team-row">
+              <div class="team-col">
+                <div class="team-image-div">
+                  <img class="team-img" src="../assets/teams/men.jpg" alt="" />
+                  <div
+                    class="hover-social-menu d-flex justify-content-around align-items-baseline mt-3"
+                  >
+                    <i class="fa-brands fa-facebook"></i>
+                    <i class="fa-brands fa-instagram"></i>
+                    <i class="fa-brands fa-linkedin"></i>
+                    <i class="fa-brands fa-github"></i>
+                  </div>
+                </div>
+                <div class="team-content">
+                  <h4><a href="#" class="member-name">Rahul Bose C P</a></h4>
+                  <p class="member-position">CFO</p>
+                </div>
+              </div>
+              <div class="team-col">
+                <div class="team-image-div">
+                  <img class="team-img" src="../assets/teams/men.jpg" alt="" />
+                  <div
+                    class="hover-social-menu d-flex justify-content-around align-items-baseline mt-3"
+                  >
+                    <i class="fa-brands fa-facebook"></i>
+                    <i class="fa-brands fa-instagram"></i>
+                    <i class="fa-brands fa-linkedin"></i>
+                    <i class="fa-brands fa-github"></i>
+                  </div>
+                </div>
+                <div class="team-content">
+                  <h4><a href="#" class="member-name">Gokul Krishnan U</a></h4>
+                  <p class="member-position">CEO</p>
+                </div>
+              </div>
+              <div class="team-col">
+                <div class="team-image-div">
+                  <img
+                    class="team-img"
+                    src="../assets/teams/women.jpg"
+                    alt=""
+                  />
+                  <div
+                    class="hover-social-menu d-flex justify-content-around align-items-baseline mt-3"
+                  >
+                    <a href="#"><i class="fa-brands fa-facebook"></i></a>
+                    <a href="#"><i class="fa-brands fa-instagram"></i></a>
+                    <a href="#"><i class="fa-brands fa-linkedin"></i></a>
+                    <a href="#"><i class="fa-brands fa-github"></i></a>
+                  </div>
+                </div>
+                <div class="team-content">
+                  <h4><a href="#" class="member-name">Ashtamy Ajayan</a></h4>
+                  <p class="member-position">CCO</p>
+                </div>
+              </div>
+            </div>
+            <div class="team-dept">
+              <h3>Research and Development Department</h3>
+            </div>
+            <div class="team-row">
+              <div class="team-col">
+                <div class="team-image-div">
+                  <img
+                    class="team-img"
+                    src="../assets/teams/women.jpg"
+                    alt=""
+                  />
+                  <div
+                    class="hover-social-menu d-flex justify-content-around align-items-baseline mt-3"
+                  >
+                    <i class="fa-brands fa-facebook"></i>
+                    <i class="fa-brands fa-instagram"></i>
+                    <i class="fa-brands fa-linkedin"></i>
+                    <i class="fa-brands fa-github"></i>
+                  </div>
+                </div>
+                <div class="team-content">
+                  <h4><a href="#" class="member-name">Anjana A</a></h4>
+                  <p class="member-position">Research and Development Head</p>
+                </div>
+              </div>
+              <div class="team-col">
+                <div class="team-image-div">
+                  <img
+                    class="team-img"
+                    src="../assets/teams/women.jpg"
+                    alt=""
+                  />
+                  <div
+                    class="hover-social-menu d-flex justify-content-around align-items-baseline mt-3"
+                  >
+                    <i class="fa-brands fa-facebook"></i>
+                    <i class="fa-brands fa-instagram"></i>
+                    <i class="fa-brands fa-linkedin"></i>
+                    <i class="fa-brands fa-github"></i>
+                  </div>
+                </div>
+                <div class="team-content">
+                  <h4><a href="#" class="member-name">Swetha Nair L</a></h4>
+                  <p class="member-position">Project Associate</p>
+                </div>
+              </div>
+            </div>
+            <div class="team-dept">
+              <h3>Mern Stack Development</h3>
+            </div>
+            <div class="team-row">
+              <div class="team-col">
+                <div class="team-image-div">
+                  <img class="team-img" src="../assets/teams/men.jpg" alt="" />
+                  <div
+                    class="hover-social-menu d-flex justify-content-around align-items-baseline mt-3"
+                  >
+                    <i class="fa-brands fa-facebook"></i>
+                    <i class="fa-brands fa-instagram"></i>
+                    <i class="fa-brands fa-linkedin"></i>
+                    <i class="fa-brands fa-github"></i>
+                  </div>
+                </div>
+                <div class="team-content">
+                  <h4><a href="#" class="member-name">Sooraj S</a></h4>
+                  <p class="member-position">Project Manager</p>
+                </div>
+              </div>
+              <div class="team-col">
+                <div class="team-image-div">
+                  <img class="team-img" src="../assets/teams/men.jpg" alt="" />
+                  <div
+                    class="hover-social-menu d-flex justify-content-around align-items-baseline mt-3"
+                  >
+                    <i class="fa-brands fa-facebook"></i>
+                    <i class="fa-brands fa-instagram"></i>
+                    <i class="fa-brands fa-linkedin"></i>
+                    <i class="fa-brands fa-github"></i>
+                  </div>
+                </div>
+                <div class="team-content">
+                  <h4><a href="#" class="member-name">Adarsh D</a></h4>
+                  <p class="member-position">Project Associate</p>
+                </div>
+              </div>
+              <div class="team-col">
+                <div class="team-image-div">
+                  <img
+                    class="team-img"
+                    src="../assets/teams/women.jpg"
+                    alt=""
+                  />
+                  <div
+                    class="hover-social-menu d-flex justify-content-around align-items-baseline mt-3"
+                  >
+                    <i class="fa-brands fa-facebook"></i>
+                    <i class="fa-brands fa-instagram"></i>
+                    <i class="fa-brands fa-linkedin"></i>
+                    <i class="fa-brands fa-github"></i>
+                  </div>
+                </div>
+                <div class="team-content">
+                  <h4><a href="#" class="member-name">Sruthi S</a></h4>
+                  <p class="member-position">Full Stack Developer</p>
+                </div>
+              </div>
+              <div class="team-col">
+                <div class="team-image-div">
+                  <img class="team-img" src="../assets/teams/men.jpg" alt="" />
+                  <div
+                    class="hover-social-menu d-flex justify-content-around align-items-baseline mt-3"
+                  >
+                    <i class="fa-brands fa-facebook"></i>
+                    <i class="fa-brands fa-instagram"></i>
+                    <i class="fa-brands fa-linkedin"></i>
+                    <i class="fa-brands fa-github"></i>
+                  </div>
+                </div>
+                <div class="team-content">
+                  <h4><a href="#" class="member-name">Vishva K</a></h4>
+                  <p class="member-position">Full Stack Developer</p>
+                </div>
+              </div>
+            </div>
+            <div class="team-dept">
+              <h3>HR and Marketing Department</h3>
+            </div>
+            <div class="team-row">
+              <div class="team-col">
+                <div class="team-image-div">
+                  <img class="team-img" src="../assets/teams/men.jpg" alt="" />
+                  <div
+                    class="hover-social-menu d-flex justify-content-around align-items-baseline mt-3"
+                  >
+                    <i class="fa-brands fa-facebook"></i>
+                    <i class="fa-brands fa-instagram"></i>
+                    <i class="fa-brands fa-linkedin"></i>
+                    <i class="fa-brands fa-github"></i>
+                  </div>
+                </div>
+                <div class="team-content">
+                  <h4>
+                    <a href="#" class="member-name">Fabin Baldwin Gomez</a>
+                  </h4>
+                  <p class="member-position">Human Resource Manager</p>
+                </div>
+              </div>
+              <div class="team-col">
+                <div class="team-image-div">
+                  <img class="team-img" src="../assets/teams/men.jpg" alt="" />
+                  <div
+                    class="hover-social-menu d-flex justify-content-around align-items-baseline mt-3"
+                  >
+                    <i class="fa-brands fa-facebook"></i>
+                    <i class="fa-brands fa-instagram"></i>
+                    <i class="fa-brands fa-linkedin"></i>
+                    <i class="fa-brands fa-github"></i>
+                  </div>
+                </div>
+                <div class="team-content">
+                  <h4><a href="#" class="member-name">Shan Raj</a></h4>
+                  <p class="member-position">Digital Marketing Executive</p>
+                </div>
+              </div>
+              <div class="team-col">
+                <div class="team-image-div">
+                  <img
+                    class="team-img"
+                    src="../assets/teams/women.jpg"
+                    alt=""
+                  />
+                  <div
+                    class="hover-social-menu d-flex justify-content-around align-items-baseline mt-3"
+                  >
+                    <i class="fa-brands fa-facebook"></i>
+                    <i class="fa-brands fa-instagram"></i>
+                    <i class="fa-brands fa-linkedin"></i>
+                    <i class="fa-brands fa-github"></i>
+                  </div>
+                </div>
+                <div class="team-content">
+                  <h4><a href="#" class="member-name">Brinimol</a></h4>
+                  <p class="member-position">Business Development Officer</p>
+                </div>
+              </div>
+              <div class="team-col">
+                <div class="team-image-div">
+                  <img
+                    class="team-img"
+                    src="../assets/teams/women.jpg"
+                    alt=""
+                  />
+                  <div
+                    class="hover-social-menu d-flex justify-content-around align-items-baseline mt-3"
+                  >
+                    <i class="fa-brands fa-facebook"></i>
+                    <i class="fa-brands fa-instagram"></i>
+                    <i class="fa-brands fa-linkedin"></i>
+                    <i class="fa-brands fa-github"></i>
+                  </div>
+                </div>
+                <div class="team-content">
+                  <h4><a href="#" class="member-name">Vismaya sivadas</a></h4>
+                  <p class="member-position">Business Development Officer</p>
+                </div>
+              </div>
+              <div class="team-col">
+                <div class="team-image-div">
+                  <img
+                    class="team-img"
+                    src="../assets/teams/women.jpg"
+                    alt=""
+                  />
+                  <div
+                    class="hover-social-menu d-flex justify-content-around align-items-baseline mt-3"
+                  >
+                    <i class="fa-brands fa-facebook"></i>
+                    <i class="fa-brands fa-instagram"></i>
+                    <i class="fa-brands fa-linkedin"></i>
+                    <i class="fa-brands fa-github"></i>
+                  </div>
+                </div>
+                <div class="team-content">
+                  <h4><a href="#" class="member-name">Ankita A S</a></h4>
+                  <p class="member-position">BDE / DM Executive</p>
+                </div>
+              </div>
+              <div class="team-col">
+                <div class="team-image-div">
+                  <img
+                    class="team-img"
+                    src="../assets/teams/women.jpg"
+                    alt=""
+                  />
+                  <div
+                    class="hover-social-menu d-flex justify-content-around align-items-baseline mt-3"
+                  >
+                    <i class="fa-brands fa-facebook"></i>
+                    <i class="fa-brands fa-instagram"></i>
+                    <i class="fa-brands fa-linkedin"></i>
+                    <i class="fa-brands fa-github"></i>
+                  </div>
+                </div>
+                <div class="team-content">
+                  <h4><a href="#" class="member-name">Ansiya A R</a></h4>
+                  <p class="member-position">Jr Digital Marketing</p>
+                </div>
+              </div>
+            </div>
+            <div class="team-dept">
+              <h3>HR and Marketing Department</h3>
+            </div>
             <div class="team-row">
               <div class="team-col">
                 <div class="team-image-div">
@@ -456,29 +769,8 @@
                   </div>
                 </div>
                 <div class="team-content">
-                  <h4><a href="#" class="member-name">Rahul Bose C P</a></h4>
-                  <p class="member-position">CFO</p>
-                </div>
-              </div>
-              <div class="team-col">
-                <div class="team-image-div">
-                  <img
-                    class="team-img"
-                    src="../assets/teams/men.jpg"
-                    alt=""
-                  />
-                  <div
-                    class="hover-social-menu d-flex justify-content-around align-items-baseline mt-3"
-                  >
-                    <i class="fa-brands fa-facebook"></i>
-                    <i class="fa-brands fa-instagram"></i>
-                    <i class="fa-brands fa-linkedin"></i>
-                    <i class="fa-brands fa-github"></i>
-                  </div>
-                </div>
-                <div class="team-content">
-                  <h4><a href="#" class="member-name">Gokul Krishnan U</a></h4>
-                  <p class="member-position">CEO</p>
+                  <h4><a href="#" class="member-name">Akshay Krishnan U</a></h4>
+                  <p class="member-position">Technical Officer</p>
                 </div>
               </div>
             </div>
@@ -522,9 +814,7 @@
                   </li>
                   <li><a href="./advisory.html">Advanced Tech</a></li>
                   <li>
-                    <a href="./maintenance.html"
-                      >Maintenance and Support</a
-                    >
+                    <a href="./maintenance.html">Maintenance and Support</a>
                   </li>
                   <li><a href="./advisory.html">Advisory</a></li>
                   <li><a href="./appdev.html">App Development</a></li>
@@ -700,11 +990,10 @@
       });
 
       const featuresAI = document.getElementById("AI");
-      
+
       featuresAI.addEventListener("click", () => {
         window.location.href = "./aisol.html";
-      })
-
+      });
     </script>
     <script
       src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"
