--- a/pages/contact.html
+++ b/pages/contact.html
@@ -284,17 +284,16 @@
               class="adr-row d-flex justify-content-center align-items-center gap-5"
             >
               <div class="adr-col">
-                <h4 class="txt">Head Office</h4>
+                <h4 class="txt"><i style="margin-right: 15px; color: #0092ff;" class="fa-solid fa-indian-rupee-sign"></i>Head Office</h4>
                 <span class="txth">
                   TC 26/981, First floor, Plammoodu - PMG Road TVM - 04, Kerala
                   695033
                 </span>
               </div>
               <div class="adr-col">
-                <h4 class="txt">Cooperative Office</h4>
+                <h4 class="txt"><i style="margin-right: 15px; color: #0092ff;" class="fa-solid fa-dollar-sign"></i>Cooperative Office</h4>
                 <span class="txth">
-                  Sunny Mead Lane, Near Jubilee Hospital, First Floor, Erathodi,
-                  Palayam Trivandrum 695033
+                  6010 Singletree lane <br />Jamesville Newyork USA
                 </span>
               </div>
             </div>
