--- a/pages/project.html
+++ b/pages/project.html
@@ -244,7 +244,7 @@
                   <a target="_blank">LLM Based Speech and Text Transformater</a>
                 </li>
                 <li>
-                  <a target="_blank">FarmEasy - AI (App for every Farmer)</a>
+                  <a target="_blank">Farm App AI (App for Every user)</a>
                 </li>
                 <li>
                   <a target="_blank">Stock Data Analytics and Forecasting</a>
@@ -263,13 +263,13 @@
                   <a href="#">Plant Disease Detection (Plant-Care App)</a>
                 </li>
                 <li><a href="#">Malayalam Speech Generation App</a></li>
-                <li><a href="#">Image Enchance App</a></li>
+                <li><a href="#">Image Enchancement App</a></li>
 
 
                 <li>
                   <a href="#">Medical Image Analysis & Feature Extraction</a>
                 </li>
-                <li><a href="#">Catrait Eye Segmentation</a></li>
+                <li><a href="#">Bone frature Detection</a></li>
                 <li>
                   <a href="#">Skin ACNE Analysis & Real time Identification</a>
                 </li>
