--- a/index.html
+++ b/index.html
@@ -697,7 +697,7 @@
             <h3 class="sec-title-gallery">
               <i class="fa-solid fa-user-group"></i>OUR TEAM
             </h3>
-            <h2 class="gallery-title-head">Team Member</h2>
+            <h2 class="gallery-title-head">Team Members</h2>
             <div class="sec-title-seperator">
               <div class="blue-item"></div>
             </div>
@@ -744,6 +744,27 @@
                 <div class="team-content">
                   <h4><a href="#" class="member-name">Gokul Krishnan U</a></h4>
                   <p class="member-position">CEO</p>
+                </div>
+              </div>
+              <div class="team-col">
+                <div class="team-image-div">
+                  <img
+                    class="team-img"
+                    src="./assets/teams/women.jpg"
+                    alt=""
+                  />
+                  <div
+                    class="hover-social-menu d-flex justify-content-around align-items-baseline mt-3"
+                  >
+                    <a href="#"><i class="fa-brands fa-facebook"></i></a>
+                    <a href="#"><i class="fa-brands fa-instagram"></i></a>
+                    <a href="#"><i class="fa-brands fa-linkedin"></i></a>
+                    <a href="#"><i class="fa-brands fa-github"></i></a>
+                  </div>
+                </div>
+                <div class="team-content">
+                  <h4><a href="#" class="member-name">Ashtamy Ajayan</a></h4>
+                  <p class="member-position">CCO</p>
                 </div>
               </div>
             </div>
