added some more changes

--- a/index.html
+++ b/index.html
@@ -764,7 +764,7 @@
                 </div>
                 <div class="team-content">
                   <h4><a href="#" class="member-name">Ashtamy Ajayan</a></h4>
-                  <p class="member-position">CCO</p>
+                  <p class="member-position">COO</p>
                 </div>
               </div>
             </div>
