--- a/pages/aboutus.html
+++ b/pages/aboutus.html
@@ -495,12 +495,11 @@
                 </div>
                 <div class="team-content">
                   <h4><a href="#" class="member-name">Ashtamy Ajayan</a></h4>
-                  <p class="member-position">CCO</p>
+                  <p class="member-position">COO</p>
                 </div>
               </div>
             </div>
             <div class="team-dept">
-              <h3>Research and Development Department</h3>
             </div>
             <div class="team-row">
               <div class="team-col">
@@ -547,7 +546,6 @@
               </div>
             </div>
             <div class="team-dept">
-              <h3>Mern Stack Development</h3>
             </div>
             <div class="team-row">
               <div class="team-col">
@@ -624,7 +622,6 @@
               </div>
             </div>
             <div class="team-dept">
-              <h3>HR and Marketing Department</h3>
             </div>
             <div class="team-row">
               <div class="team-col">
@@ -749,7 +746,6 @@
               </div>
             </div>
             <div class="team-dept">
-              <h3>HR and Marketing Department</h3>
             </div>
             <div class="team-row">
               <div class="team-col">
