added some more datas

--- a/index.html
+++ b/index.html
@@ -214,6 +214,7 @@
                   <a
                     id="service-btn"
                     role="button"
+                    href="./pages/digitalmarket.html"
                     class="btn btn-primary services-btn btn-effect"
                   >
                     <div class="text-wrap">
@@ -258,6 +259,7 @@
                     id="service-btn"
                     role="button"
                     class="btn btn-primary services-btn btn-effect"
+                    href="./pages/erppage.html"
                   >
                     <div class="text-wrap">
                       <span class="text-1"
@@ -288,18 +290,18 @@
                   Make Your Move Mark Your Success
                 </h5>
                 <p class="p-large fade-in">
-                  SciPy Technologies is a Thiruvananthapuram based company
-                  offering unique solutions and a variety of services in the
-                  field of Artificial intelligence. Our family is setting the
-                  industry standards, positioning us as category leaders
-                  worldwide. Our team members are technology veterans, committed
-                  to providing smart solutions for any size of project. Contact
-                  us to request a demo or meet a member of our team.
+                  Crafting seamless digital experiences is our forte. Our web
+                  development team combines creativity with functionality to
+                  build websites that captivate and convert. Responsive design,
+                  intuitive navigation, and robust backend structures – we
+                  deliver websites that not only meet but exceed
+                  user expectations.
                 </p>
                 <div class="services-div fade-in">
                   <a
                     id="service-btn"
                     role="button"
+                    href="./pages/websitedev.html"
                     class="btn btn-primary services-btn btn-effect"
                   >
                     <div class="text-wrap">
@@ -331,19 +333,20 @@
                   Make Your Move Mark Your Success
                 </h5>
                 <p class="p-large fade-in">
-                  SciPy Technologies is a Thiruvananthapuram based company
-                  offering unique solutions and a variety of services in the
-                  field of Artificial intelligence. Our family is setting the
-                  industry standards, positioning us as category leaders
-                  worldwide. Our team members are technology veterans, committed
-                  to providing smart solutions for any size of project. Contact
-                  us to request a demo or meet a member of our team.
+                  Unlock the potential of AI with our comprehensive solutions.
+                  From machine learning algorithms to natural language
+                  processing, we deploy intelligent systems that adapt, learn,
+                  and enhance business operations. Whether you're looking for
+                  predictive analytics, automation, or personalized user
+                  experiences, our AI expertise transforms
+                  concepts into reality.
                 </p>
                 <div class="services-div fade-in">
                   <a
                     id="service-btn"
                     role="button"
                     class="btn btn-primary services-btn btn-effect"
+                    href="./pages/aisol.html"
                   >
                     <div class="text-wrap">
                       <span class="text-1"
@@ -592,14 +595,13 @@
                 </h1>
                 <h2>Who we are.....?</h2>
                 <p>
-                  We mainly focus on Artificial intelligence (AI) is
-                  wide-ranging branch of computer science concerned with
-                  building smart machines capable of performing tasks that
-                  typically require human intelligence. AI is an
-                  interdisciplinary science with multiple approaches, but
-                  advancements in machine learning and deep learning are
-                  creating a paradigm shift in virtually every sector of the
-                  tech industry.
+                  Welcome to SciPy Technologies , where technology meets vision,
+                  and innovation becomes the driving force behind every
+                  solution. Established with a passion for reshaping the digital
+                  landscape, we are more than an IT company – we are architects
+                  of transformative experiences, pioneers of cutting-edge
+                  technology, and partners in your journey towards
+                  digital excellence.
                 </p>
                 <div class="aboutus-btn">
                   <a href="./pages/aboutus.html">About Us</a>
@@ -691,7 +693,7 @@
           </div>
         </div>
       </section>
-      <section class="team-members">
+      <!-- <section class="team-members">
         <div class="auto-container">
           <div class="gallery-title">
             <h3 class="sec-title-gallery">
@@ -715,8 +717,8 @@
                     class="hover-social-menu d-flex justify-content-around align-items-baseline mt-3"
                   >
                     <a href="#"><i class="fa-brands fa-facebook"></i></a>
-                    <a href="#"><i class="fa-brands fa-instagram"></i></a>
-                    <a href="#"><i class="fa-brands fa-linkedin"></i></a>
+                    <a href="https://www.instagram.com/dreamer_rickz/"><i class="fa-brands fa-instagram"></i></a>
+                    <a href="https://www.linkedin.com/in/rahul-bose-cp-125a55220/"><i class="fa-brands fa-linkedin"></i></a>
                     <a href="#"><i class="fa-brands fa-github"></i></a>
                   </div>
                 </div>
@@ -736,8 +738,8 @@
                     class="hover-social-menu d-flex justify-content-around align-items-baseline mt-3"
                   >
                     <a href="#"><i class="fa-brands fa-facebook"></i></a>
-                    <a href="#"><i class="fa-brands fa-instagram"></i></a>
-                    <a href="#"><i class="fa-brands fa-linkedin"></i></a>
+                    <a href="https://www.instagram.com/goku_monu/"><i class="fa-brands fa-instagram"></i></a>
+                    <a href="https://www.linkedin.com/in/gokul-krishnan-u-30193921a/"><i class="fa-brands fa-linkedin"></i></a>
                     <a href="#"><i class="fa-brands fa-github"></i></a>
                   </div>
                 </div>
@@ -748,16 +750,12 @@
               </div>
               <div class="team-col">
                 <div class="team-image-div">
-                  <img
-                    class="team-img"
-                    src="./assets/teams/women.jpg"
-                    alt=""
-                  />
+                  <img class="team-img" src="./assets/teams/women.jpg" alt="" />
                   <div
                     class="hover-social-menu d-flex justify-content-around align-items-baseline mt-3"
                   >
                     <a href="#"><i class="fa-brands fa-facebook"></i></a>
-                    <a href="#"><i class="fa-brands fa-instagram"></i></a>
+                    <a href="https://www.instagram.com/_me._.angel/"><i class="fa-brands fa-instagram"></i></a>
                     <a href="#"><i class="fa-brands fa-linkedin"></i></a>
                     <a href="#"><i class="fa-brands fa-github"></i></a>
                   </div>
@@ -770,7 +768,7 @@
             </div>
           </div>
         </div>
-      </section>
+      </section> -->
       <section class="Clients-Section">
         <div class="auto-container">
           <div class="clients-title">
@@ -1004,8 +1002,9 @@
                 <p class="contact-detail">
                   <i class="fa-solid fa-phone"></i><span>+91 892-122-9471</span>
                 </p>
-                <p class="contact-detail">
-                  <i class="fa-solid fa-envelope"></i><span>hr@scipy.com</span>
+                <p class="contact-detail" id="emailhr">
+                  <i class="fa-solid fa-envelope"></i
+                  ><span><a href="mailto:hr@scipy.com">hr@scipy.com</a></span>
                 </p>
                 <div class="contact-us">
                   <a href="#"
