--- a/pages/aboutus.html
+++ b/pages/aboutus.html
@@ -217,7 +217,7 @@
               <div class="img-content-inner">
                 <div class="img-contents">
                   <div class="about-counter">
-                    <h3><20+></h3>
+                    <h3>20+</h3>
                     <p>Our Active Member</p>
                   </div>
                   <div
@@ -262,10 +262,13 @@
                   Engineering IT services.
                 </h3>
                 <div class="about-one-text">
-                  Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-                  Veniam accusantium ab, praesentium iste natus qui quasi
-                  voluptate quia neque facere, enim porro, exercitationem
-                  laboriosam nihil dolorem? Animi officia laboriosam harum!
+                  Welcome to SciPy Technologies , where technology meets vision,
+                  and innovation becomes the driving force behind every
+                  solution. Established with a passion for reshaping the digital
+                  landscape, we are more than an IT company – we are architects
+                  of transformative experiences, pioneers of cutting-edge
+                  technology, and partners in your journey towards
+                  digital excellence.
                 </div>
                 <div class="about-clear-row">
                   <div class="about-clear-col">
@@ -499,8 +502,7 @@
                 </div>
               </div>
             </div>
-            <div class="team-dept">
-            </div>
+            <div class="team-dept"></div>
             <div class="team-row">
               <div class="team-col">
                 <div class="team-image-div">
@@ -545,8 +547,7 @@
                 </div>
               </div>
             </div>
-            <div class="team-dept">
-            </div>
+            <div class="team-dept"></div>
             <div class="team-row">
               <div class="team-col">
                 <div class="team-image-div">
@@ -621,8 +622,7 @@
                 </div>
               </div>
             </div>
-            <div class="team-dept">
-            </div>
+            <div class="team-dept"></div>
             <div class="team-row">
               <div class="team-col">
                 <div class="team-image-div">
@@ -745,16 +745,11 @@
                 </div>
               </div>
             </div>
-            <div class="team-dept">
-            </div>
+            <div class="team-dept"></div>
             <div class="team-row">
               <div class="team-col">
                 <div class="team-image-div">
-                  <img
-                    class="team-img"
-                    src="../assets/teams/men.jpg"
-                    alt=""
-                  />
+                  <img class="team-img" src="../assets/teams/men.jpg" alt="" />
                   <div
                     class="hover-social-menu d-flex justify-content-around align-items-baseline mt-3"
                   >
